--- a/pages/18739.html
+++ b/pages/18739.html
@@ -317,11 +317,29 @@ margin-left: 0em;
 <div class='hide'>
 <p><strong><a class='existingWikiWord' href='/nlab/show/harmonic+analysis'>harmonic analysis</a></strong></p>
 
-<p><strong>Definitions</strong></p>
+<p><strong><a class='existingWikiWord' href='/nlab/show/wave'>waves</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/plane+wave'>plane wave</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/wave+vector'>wave vector</a>, <a class='existingWikiWord' href='/nlab/show/wavelength'>wavelength</a>, <a class='existingWikiWord' href='/nlab/show/wavelength'>wave number</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/frequency'>frequency</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/amplitude'>amplitude</a></p>
+
+<p><a class='existingWikiWord' href='/nlab/show/dispersion+relation'>dispersion relation</a></p>
+</li>
+</ul>
 
 <p><a class='existingWikiWord' href='/nlab/show/Fourier+transform'>Fourier analysis</a></p>
 
 <ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Schwartz+space'>Schwartz space</a> of <a class='existingWikiWord' href='/nlab/show/rapidly+decreasing+function'>functions with rapidly decreasing partial derivatives</a></p>
+</li>
+
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Fourier+transform'>Fourier transform</a>, <a class='existingWikiWord' href='/nlab/show/Fourier-Laplace+transform'>Fourier-Laplace transform</a></p>
 </li>
@@ -341,25 +359,88 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Parseval%27s+theorem'>Parseval&#39;s theorem</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Paley-Wiener-Schwartz+theorem'>Paley-Wiener-Schwartz theorem</a></p>
+</li>
 </ul>
 
-<p><a class='existingWikiWord' href='/nlab/show/sampling+theory'>sampling theory</a></p>
+<p><strong><a class='existingWikiWord' href='/nlab/show/sampling+theory'>sampling theory</a></strong></p>
+
+<ul>
+<li>
+<p><span class='newWikiWord'>wavelet<a href='/nlab/new/wavelet'>?</a></span>, <a class='existingWikiWord' href='/nlab/show/curvelet'>curvelet</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/coherent+quantum+state'>coherent state</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/signal+processing'>signal processing</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/time+series'>time series</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/information+geometry'>information geometry</a></p>
+</li>
+</ul>
 </div>
 </div>
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_theorems'>Related theorems</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#statement'>Statement</a></li><li><a href='#related_theorems'>Related theorems</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>In <a class='existingWikiWord' href='/nlab/show/harmonic+analysis'>harmonic analysis</a>, the <em>Fourier inversion theorem</em> states that the <a class='existingWikiWord' href='/nlab/show/Fourier+transform'>Fourier transform</a> is its own <a class='existingWikiWord' href='/nlab/show/inverse+function'>inverse</a>, up to a sign of the argument.</p>
+<p>In <a class='existingWikiWord' href='/nlab/show/harmonic+analysis'>harmonic analysis</a>, the <em>Fourier inversion theorem</em> states that the <a class='existingWikiWord' href='/nlab/show/Fourier+transform'>Fourier transform</a> is an <a class='existingWikiWord' href='/nlab/show/isomorphism'>isomorphism</a> on the <a class='existingWikiWord' href='/nlab/show/Schwartz+space'>Schwartz space</a> of <a class='existingWikiWord' href='/nlab/show/rapidly+decreasing+function'>functions with rapidly decreasing partial derivatives</a>. Moreover, it is its own <a class='existingWikiWord' href='/nlab/show/inverse'>inverse</a> up to a prefactor and reflection at the origin.</p>
 
 <p>For Fourier transform over <a class='existingWikiWord' href='/nlab/show/cartesian+space'>Cartesian spaces</a>, see e.g. <a href='#Hoermander90'>Hörmander 90 ,theorem 7.1.5, theorem 7.1.10</a>, <a href='Fourier+transform#FourierInversion'>this prop.</a>.</p>
+
+<h2 id='statement'>Statement</h2>
+
+<p>Let <math class='maruku-mathml' display='inline' id='mathml_705294d1e343e8db6fce378e6200f8435d364960_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding='application/x-tex'>n \in \mathbb{N}</annotation></semantics></math> and consider <math class='maruku-mathml' display='inline' id='mathml_705294d1e343e8db6fce378e6200f8435d364960_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>\mathbb{R}^n</annotation></semantics></math> the <a class='existingWikiWord' href='/nlab/show/cartesian+space'>Cartesian space</a> of <a class='existingWikiWord' href='/nlab/show/dimension'>dimension</a> <math class='maruku-mathml' display='inline' id='mathml_705294d1e343e8db6fce378e6200f8435d364960_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>.</p>
+
+<div class='num_defn' id='FourierInversion'>
+<h6 id='proposition'>Proposition</h6>
+
+<p><strong>(<a class='existingWikiWord' href='/nlab/show/Fourier+inversion+theorem'>Fourier inversion theorem</a>)</strong></p>
+
+<p>The <a class='existingWikiWord' href='/nlab/show/Fourier+transform'>Fourier transform</a> <math class='maruku-mathml' display='inline' id='mathml_705294d1e343e8db6fce378e6200f8435d364960_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mrow><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo></mrow><mo>^</mo></mover></mrow><annotation encoding='application/x-tex'>\widehat{(-)}</annotation></semantics></math> (def. \ref{FourierTransformSmoothFunctionsWithRapidlyDecayingDerivativesOnCartesianSpace}) on the <a class='existingWikiWord' href='/nlab/show/Schwartz+space'>Schwartz space</a> <math class='maruku-mathml' display='inline' id='mathml_705294d1e343e8db6fce378e6200f8435d364960_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒮</mi><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>\mathcal{S}(\mathbb{R}^n)</annotation></semantics></math> (def. \ref{SchwartzSpace}) is an <a class='existingWikiWord' href='/nlab/show/isomorphism'>isomorphism</a>, with <a class='existingWikiWord' href='/nlab/show/inverse+function'>inverse function</a> the <em>inverse Fourier transform</em></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_705294d1e343e8db6fce378e6200f8435d364960_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mrow><mo stretchy='false'>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>)</mo></mrow><mo>ˇ</mo></mover><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><mi>𝒮</mi><mo stretchy='false'>(</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo stretchy='false'>)</mo><mo>⟶</mo><mi>𝒮</mi><mo stretchy='false'>(</mo><msup><mi>ℛ</mi> <mi>n</mi></msup><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
+  \widecheck {(-)}
+     \;\colon\;
+  \mathcal{S}(\mathbb{R}^n) \longrightarrow \mathcal{S}(\mathcal{R}^n)
+
+</annotation></semantics></math></div>
+<p>given by</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_705294d1e343e8db6fce378e6200f8435d364960_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mi>g</mi><mo>ˇ</mo></mover><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mspace width='thickmathspace'></mspace><mo>≔</mo><mspace width='thickmathspace'></mspace><munder><mo>∫</mo><mrow><mi>k</mi><mo>∈</mo><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow></munder><mi>g</mi><mo stretchy='false'>(</mo><mi>k</mi><mo stretchy='false'>)</mo><msup><mi>e</mi> <mrow><mn>2</mn><mi>π</mi><mi>i</mi><mi>k</mi><mo>⋅</mo><mi>x</mi></mrow></msup><mspace width='thinmathspace'></mspace><mfrac><mrow><msup><mi>d</mi> <mi>n</mi></msup><mi>k</mi></mrow><mrow><mo stretchy='false'>(</mo><mn>2</mn><mi>π</mi><msup><mo stretchy='false'>)</mo> <mi>n</mi></msup></mrow></mfrac><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+  \widecheck g (x)
+    \;\coloneqq\;
+   \underset{k \in \mathbb{R}^n}{\int}
+      g(k) e^{2 \pi i k \cdot x}
+   \, \frac{d^n k}{(2\pi)^n}
+   \,.
+
+</annotation></semantics></math></div>
+<p>Hence in the language of <a class='existingWikiWord' href='/nlab/show/harmonic+analysis'>harmonic analysis</a> the function <math class='maruku-mathml' display='inline' id='mathml_705294d1e343e8db6fce378e6200f8435d364960_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mover><mi>g</mi><mo>ˇ</mo></mover><mo lspace='verythinmathspace'>:</mo><msup><mi>ℝ</mi> <mi>n</mi></msup><mo>→</mo><mi>ℂ</mi></mrow><annotation encoding='application/x-tex'>\widecheck g \colon \mathbb{R}^n \to \mathbb{C}</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/superposition'>superposition</a> of <a class='existingWikiWord' href='/nlab/show/plane+wave'>plane waves</a> in which the plane wave with <a class='existingWikiWord' href='/nlab/show/wave+vector'>wave vector</a> <math class='maruku-mathml' display='inline' id='mathml_705294d1e343e8db6fce378e6200f8435d364960_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi><mo>∈</mo><msup><mi>ℝ</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>k\in \mathbb{R}^n</annotation></semantics></math> appears with <a class='existingWikiWord' href='/nlab/show/amplitude'>amplitude</a> <math class='maruku-mathml' display='inline' id='mathml_705294d1e343e8db6fce378e6200f8435d364960_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi><mo stretchy='false'>(</mo><mi>k</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>g(k)</annotation></semantics></math>.</p>
+</div>
+
+<p>(e.g. <a href='#Hoermander90'>Hörmander, theorem 7.1.5</a>)</p>
 
 <h2 id='related_theorems'>Related theorems</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Parseval%27s+theorem'>Parseval&#39;s theorem</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Parseval%27s+theorem'>Parseval&#39;s theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Paley-Wiener-Schwartz+theorem'>Paley-Wiener-Schwartz theorem</a></p>
+</li>
 </ul>
 
 <h2 id='references'>References</h2>
@@ -367,17 +448,21 @@ margin-left: 0em;
 <ul>
 <li id='Hoermander90'><a class='existingWikiWord' href='/nlab/show/Lars+H%C3%B6rmander'>Lars Hörmander</a>, theorem 7.1.5 of <em>The analysis of linear partial differential operators</em>, vol. I, Springer 1983, 1990</li>
 </ul>
+
+<p>
+ 
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on November  2, 2017 08:54:43 
+  Revised on November  7, 2017 11:45:45 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.17)
+  (195.37.234.89)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Fourier+inversion+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Fourier+inversion+theorem/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Fourier+inversion+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Fourier+inversion+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Fourier+inversion+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Fourier+inversion+theorem/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Fourier+inversion+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Fourier+inversion+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
