--- a/pages/18759.html
+++ b/pages/18759.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Parseval&#39;s theorem in nLab
+      John Peacock in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Parseval&#39;s theorem
+      John Peacock
   </h1>
 
 
@@ -308,151 +308,42 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='rightHandSide'>
-<div class='toc clickDown' tabindex='0'>
-<h3 id='context'>Context</h3>
+    <ul>
+<li><a href='http://www.roe.ac.uk/~jap/'>webpage</a></li>
+</ul>
 
-<h4 id='harmonic_analysis'>Harmonic analysis</h4>
-
-<div class='hide'>
-<p><strong><a class='existingWikiWord' href='/nlab/show/harmonic+analysis'>harmonic analysis</a></strong></p>
-
-<p><strong><a class='existingWikiWord' href='/nlab/show/wave'>waves</a></strong></p>
+<h2 id='related_lab_pages'>related <math class='maruku-mathml' display='inline' id='mathml_db7216f8976042371bf37b6ce352717513e211de_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab pages</h2>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/plane+wave'>plane wave</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/cosmology'>cosmology</a></p>
+</li>
 
-<p><a class='existingWikiWord' href='/nlab/show/wave+vector'>wave vector</a>, <a class='existingWikiWord' href='/nlab/show/wavelength'>wavelength</a>, <a class='existingWikiWord' href='/nlab/show/wavelength'>wave number</a></p>
-
-<p><a class='existingWikiWord' href='/nlab/show/frequency'>frequency</a></p>
-
-<p><a class='existingWikiWord' href='/nlab/show/amplitude'>amplitude</a></p>
-
-<p><a class='existingWikiWord' href='/nlab/show/dispersion+relation'>dispersion relation</a></p>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Fourier+transform'>Fourier transform</a></p>
 </li>
 </ul>
 
-<p><a class='existingWikiWord' href='/nlab/show/Fourier+transform'>Fourier analysis</a></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Schwartz+space'>Schwartz space</a> of <a class='existingWikiWord' href='/nlab/show/rapidly+decreasing+function'>functions with rapidly decreasing partial derivatives</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Fourier+transform'>Fourier transform</a>, <a class='existingWikiWord' href='/nlab/show/Fourier-Laplace+transform'>Fourier-Laplace transform</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Fourier+transform+of+distributions'>Fourier transform of a distribution</a></p>
-</li>
-</ul>
-
-<p><strong>Theorems</strong></p>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Fourier+inversion+theorem'>Fourier inversion theorem</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Parseval%27s+theorem'>Parseval&#39;s theorem</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Paley-Wiener-Schwartz+theorem'>Paley-Wiener-Schwartz theorem</a></p>
-</li>
-</ul>
-
-<p><strong><a class='existingWikiWord' href='/nlab/show/sampling+theory'>sampling theory</a></strong></p>
-
-<ul>
-<li>
-<p><span class='newWikiWord'>wavelet<a href='/nlab/new/wavelet'>?</a></span>, <a class='existingWikiWord' href='/nlab/show/curvelet'>curvelet</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/coherent+quantum+state'>coherent state</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/signal+processing'>signal processing</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/time+series'>time series</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/information+geometry'>information geometry</a></p>
-</li>
-</ul>
-</div>
-</div>
-</div>
-
-<h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_theorems'>Related theorems</a></li><li><a href='#references'>References</a></li></ul></div>
-<h2 id='idea'>Idea</h2>
-
-<p>In <a class='existingWikiWord' href='/nlab/show/harmonic+analysis'>harmonic analysis</a>, <em>Parseval’ theorem</em> states that <a class='existingWikiWord' href='/nlab/show/Fourier+transform'>Fourier transform</a> is a <a class='existingWikiWord' href='/nlab/show/unitary+operator'>unitary operator</a>.</p>
-
-<p>For Fourier transform over <a class='existingWikiWord' href='/nlab/show/cartesian+space'>Cartesian spaces</a> see e.g. <a href='#Hoermander90'>Hörmander 90, theorem 7.1.6</a>, <a href='BasicPropertiesOfFourierTransformOverCartesianSpaces'>this prop.</a>.</p>
-
-<h2 id='related_theorems'>Related theorems</h2>
-
-<ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Fourier+inversion+theorem'>Fourier inversion theorem</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Paley-Wiener-Schwartz+theorem'>Paley-Wiener-Schwartz theorem</a></p>
-</li>
-</ul>
-
-<h2 id='references'>References</h2>
-
-<p>For Fourier transform over <a class='existingWikiWord' href='/nlab/show/cartesian+space'>Cartesian spaces</a>:</p>
-
-<ul>
-<li id='Hoermander90'><a class='existingWikiWord' href='/nlab/show/Lars+H%C3%B6rmander'>Lars Hörmander</a>, theorem 7.1.6 of <em>The analysis of linear partial differential operators</em>, vol. I, Springer 1983, 1990</li>
-</ul>
-
-<p>See also</p>
-
-<ul>
-<li>Wikipedia, <em><a href='https://en.wikipedia.org/wiki/Parseval%27s_theorem'>Parseval’s theorem</a></em></li>
-</ul>
-
-<p>
-</p>
-
-<p>
-</p>
-
-<p>
-</p>
+<p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
-  Revised on November  7, 2017 11:46:24 
+  Created on November  7, 2017 11:49:28 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (195.37.234.89)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Parseval%27s+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Parseval%27s+theorem/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Parseval%27s+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Parseval%27s+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/John+Peacock" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/Parseval%27s+theorem" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/John+Peacock" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/Parseval%27s+theorem" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/John+Peacock" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Parseval%27s+theorem" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/John+Peacock" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
