--- a/pages/8220.html
+++ b/pages/8220.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -962,6 +962,10 @@ margin-left: 0em;
 
 <ul>
 <li>
+<p><a class='existingWikiWord' href='/nlab/show/John+Peacock'>John Peacock</a>, <em>Cosmological Physics</em>, Cambridge University Press (<a href='http://www.roe.ac.uk/~jap/book.html'>web</a>)</p>
+</li>
+
+<li>
 <p>Jorge L. Cervantes-Cota, George Smoot, <em>Cosmology today – A brief review</em> (2011) (<a href='http://arxiv.org/abs/1107.1789'>arXiv:1107.1789</a>)</p>
 </li>
 
@@ -988,14 +992,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on September 11, 2017 17:44:53 
+  Revised on November  7, 2017 11:50:30 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (77.56.177.247)
+  (195.37.234.89)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/cosmology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cosmology/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/cosmology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cosmology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/cosmology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cosmology/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/cosmology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cosmology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
